@@ -3,6 +3,7 @@ Version Beta 1.6.0
 - Fehler in der Aktualisierung der Modelle behoben.
   Alle Models aktualisieren sich jetzt automatisch. Dadurch
   Entfallen alle "Aktualisieren" Buttons.
+- Armeen können im gleichen Quest erstellt werden, wie AIs.
 
 ------------------------------------------------------------
 
